Add administration navbar

--- a/templates/administrator/administrator.html
+++ b/templates/administrator/administrator.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <section>
-    <h1 class="text-center mt-5"> Administration</h1>
+    <h1 class="text-center mt-5"> Administrations</h1>
 </section>
 
 {% endblock content %}
