--- a/templates/administrator/administrator.html
+++ b/templates/administrator/administrator.html
@@ -5,6 +5,37 @@
 
 <section>
     <h1 class="text-center mt-5"> Administrations</h1>
+    <div class="card-admin-wrapper">
+          <!-- show Total Users -->
+        <div class="card text-center color-user">
+            <div class="card-header">
+                <h5 class="card-title text-white">Total Users</h5>
+            </div>
+            <div class="card-body">
+                <h3 class="card-title text-white">100</h3>
+            </div>
+        </div>
+        <!-- show Total rentals bookings -->
+        <div class="card text-center color-rental">
+            <div class="card-header">
+                <h5 class="card-title text-white">Total Rentals</h5>
+            </div>
+            <div class="card-body">
+                <h3 class="card-title text-white">10</h3>
+            </div>
+        </div>
+            <!-- show Total excursions bookings -->
+        <div class="card text-center text-white color-excursion" >
+            <div class="card-header">
+                <h5 class="card-title text-white">Total Excursions</h5>
+            </div>
+            <div class="card-body">
+                <h3 class="card-title text-white">5</h3>
+            </div>
+        </div>
+        
+    </div>
+
 </section>
 
 {% endblock content %}
