--- a/templates/administrator/administrator_base.html
+++ b/templates/administrator/administrator_base.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-    </nav> -->
+    </nav> 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"></i><img src="{% static 'images/Yara-logo.png' %}"
@@ -57,7 +57,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <div class="links-container">
                         <li class="nav-item">
-                            <a class="nav-link" href=""> <i class="fa-solid fa-gauge-high"></i>
+                            <a class="nav-link" href="{% url 'administrator' %}"> <i class="fa-solid fa-gauge-high"></i>
                                 Dashboard</a>
                         </li>
   
