Add excursion admin links, functions, templates and wire it

--- a/templates/administrator/administrator_base.html
+++ b/templates/administrator/administrator_base.html
@@ -61,7 +61,7 @@
                                 Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href=""> <i class="fa-solid fa-compass"></i>
+                            <a class="nav-link" href="{% url 'admin-excursion' %}"> <i class="fa-solid fa-compass"></i>
                                 Excursions</a>
                         </li>
                         <li class="nav-item">
