--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -15,7 +15,7 @@
             <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
                 {% csrf_token %}
                 {{ form | crispy}}
-                <input type="submit" class="user_button btn" name="action" value="{% trans 'Set Password' %}" />
+                <input type="submit" class="my_hover user_button btn" name="action" value="{% trans 'Set Password' %}" />
             </form>
         </div>
     </div>
