--- a/templates/excursions/add_excursions_form.html
+++ b/templates/excursions/add_excursions_form.html
@@ -13,11 +13,11 @@
             {{form|crispy}}
             <!-- Add excursion button -->
             <div class="mb-3">
-                <input class="btn user_button" type="submit" value="Add Excursion">
+                <input class="btn my_hover user_button" type="submit" value="Add Excursion">
             </div>
         </div>
         <!-- Go back to all excursion -->
-        <a href="" class="btn btn-outline-secondary" role="button" aria-pressed="true">Cancel</a>
+        <a href="" class="btn  my_hover btn-outline-secondary" role="button" aria-pressed="true">Cancel</a>
     </form>
 </section>
 {% endblock content %}
