--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -135,7 +135,7 @@
     {% else %}
     <p class="text-center">Create an account to add a review:</p>
     <div class="text-center">
-        <a class="btn user_button_sm" href="{% url 'account_signup' %}">Register/Login</a>
+        <a class="btn my_hover user_button_sm" href="{% url 'account_signup' %}">Register/Login</a>
     </div>
     {% endif %}
 
