--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -20,7 +20,7 @@
 
 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
 {% csrf_token %}
-    <button  class="btn user_button" type="submit">{% trans 'Confirm' %}</button>
+    <button  class="btn my_hover user_button" type="submit">{% trans 'Confirm' %}</button>
 </form>
 
 {% else %}
