--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -14,7 +14,7 @@
             <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
                 {% csrf_token %}
                 {{ form|crispy}}
-                <button class="btn user_button" type="submit" name="action">{% trans "Change Password" %}</button>
+                <button class="btn my_hover user_button" type="submit" name="action">{% trans "Change Password" %}</button>
             </form>
         </div>
     </div>
