--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -21,7 +21,7 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form|crispy}}
-        <input class="btn user_button" type="submit" value="{% trans 'Reset My Password' %}" />
+        <input class="my_hover btn user_button" type="submit" value="{% trans 'Reset My Password' %}" />
     </form>
     <p class="mt-3">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 </div>
