--- a/templates/allauth/socialaccount/signup.html
+++ b/templates/allauth/socialaccount/signup.html
@@ -21,7 +21,7 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button type="submit" class="user_button btn">{% trans "Sign Up" %} &raquo;</button>
+        <button type="submit" class="user_button my_hover  btn">{% trans "Sign Up" %} &raquo;</button>
       </form>
     </div>
   </div>
