--- a/templates/excursions/add_more_photos.html
+++ b/templates/excursions/add_more_photos.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <!-- Go back detail page -->
-        <a href="" class="btn btn-outline-secondary" role="button" aria-pressed="true">Cancel</a>
+        <a href="" class="btn my_hover btn-outline-secondary" role="button" aria-pressed="true">Cancel</a>
     </form>
 </section>
 {% endblock content %}
