--- a/templates/rentals/rental_details.html
+++ b/templates/rentals/rental_details.html
@@ -71,7 +71,7 @@
                         </div>
                         <!-- Submit button -->
                         <div class="form-group mt-3">
-                            <button type="submit" class="user_button btn">Submit</button>
+                            <button type="submit" class="user_button my_hover btn">Submit</button>
                         </div>
                 </form>
             </div>
@@ -135,7 +135,7 @@
     {% else %}
     <p class="text-center">Create an account to add a review:</p>
     <div class="text-center">
-        <a class="btn user_button_sm" href="{% url 'account_signup' %}">Register/Login</a>
+        <a class="btn my_hover user_button_sm" href="{% url 'account_signup' %}">Register/Login</a>
     </div>
     {% endif %}
 
