--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -119,7 +119,7 @@
                     <input class="form-control me-2" type="search" name="navbar" placeholder="Search rentals"
                         aria-label="Search">
                     {% endif %}
-                    <button class="btn sear-btn btn-outline-secondary" type="submit">Search</button>
+                    <button class="btn my_hover sear-btn btn-outline-secondary" type="submit">Search</button>
                 </form>
             </div>
         </div>
