Add button to excursion to add new items

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -543,6 +543,11 @@ body {
     background-color: var(--orange-pantone-lighter);
     border-color: var(--white);
 }
+.my_hover:focus{
+    color: var(--white);
+    background-color: var(--orange-pantone-lighter);
+    border-color: var(--white);
+}
 
 .form-title {
     text-align: center;
