--- a/templates/administrator/admin_excursions.html
+++ b/templates/administrator/admin_excursions.html
@@ -6,6 +6,10 @@
 <section>
     <h1 class="text-center mt-5">Excursions Admin</h1>
 
+    <div class="text-center mt-5">
+        <button type="button" class="btn user_button_sm my_hover"><i class="fa-solid fa-plus"></i> Add Excursion</button>
+    </div>
+
     <div class="table_wrapper table-responsive">
         <table class="data_table">
             <tr>
