Add links to admin excurions to view detail from admin

--- a/templates/administrator/admin_excursions.html
+++ b/templates/administrator/admin_excursions.html
@@ -29,7 +29,7 @@
                 <th>Status</th>
                 <th>Image</th>
                 <th>Date created</th>
-                <th>Title</th>
+                <th>Title (Links to excursion details)</th>
                 <th>Price</th>
                 <th></th>
                 <th></th>
@@ -40,7 +40,7 @@
                 <td>{{excursion.status}}</td>
                 <td><img src="{{excursion.main_image.url}}" alt="{{excursion.image_name}}" style="width:75px"></td>
                 <td>{{excursion.date_created}}</td>
-                <td>{{excursion.title|slice:":30"|title}}</td>
+                <td><a href="{% url 'excursion_detail' excursion.pk %}">{{excursion.title|slice:":30"|title}}</td></a>
                 <td>£{{excursion.Price}}</td>
                 <td><a href=""><button class="btn btn-sm btn-primary"><i class="far fa-edit">
                                 Edit</i></button></a> </td>
