--- a/templates/administrator/admin_excursions.html
+++ b/templates/administrator/admin_excursions.html
@@ -12,7 +12,7 @@
     </div>
 
     <!-- flass success message -->
-    <div class="message mt-1">
+    <div class="message mt-3">
         {% if messages %}
         {% for message in messages %}
         <div class="alert alert-success" role="alert">
@@ -22,7 +22,7 @@
         {% endif %}
     </div>
 
-
+    <!-- Table data -->
     <div class="table_wrapper table-responsive">
         <table class="data_table">
             <tr>
@@ -42,7 +42,7 @@
                 <td>{{excursion.date_created}}</td>
                 <td><a href="{% url 'excursion_detail' excursion.pk %}">{{excursion.title|slice:":30"|title}}</td></a>
                 <td>£{{excursion.Price}}</td>
-                <td><a href=""><button class="btn btn-sm btn-primary"><i class="far fa-edit">
+                <td><a href="{% url 'edit_excursion'  excursion.pk  %}"><button class="btn btn-sm btn-primary"><i class="far fa-edit">
                                 Edit</i></button></a> </td>
                 <td><a href=""><button class="btn btn-sm btn-danger "><i class="fas fa-trash-alt">
                                 Delete</i></button></a>
