--- a/templates/administrator/admin_excursions.html
+++ b/templates/administrator/admin_excursions.html
@@ -44,7 +44,7 @@
                 <td>£{{excursion.Price}}</td>
                 <td><a href="{% url 'edit_excursion'  excursion.pk  %}"><button class="btn btn-sm btn-primary"><i class="far fa-edit">
                                 Edit</i></button></a> </td>
-                <td><a href=""><button class="btn btn-sm btn-danger "><i class="fas fa-trash-alt">
+                <td><a href="{% url 'delete_excursion' excursion.pk %}"><button class="btn btn-sm btn-danger "><i class="fas fa-trash-alt">
                                 Delete</i></button></a>
                 </td>
             </tr>
