Modified the edit function to add more images and style it

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,6 +124,15 @@ body {
     width: 200px;
 }
 
+.thumbnail-form{
+    padding: 5px;
+    border-radius: 10px;
+    width: 100px;
+    height: 70px;
+    object-fit: cover;
+    cursor: pointer;
+}
+
 
 /* -------------------------------------------------------------------- home /excursion / rentals card */
 /* Slides */
