--- a/templates/administrator/edit_excursion.html
+++ b/templates/administrator/edit_excursion.html
@@ -6,7 +6,7 @@
 <section>
     <h1 class="title mt-5">Edit Excursion </h1>
 
-    <form class="add_excursions_form" method="POST" enctype="multipart/form-data" action="">
+    <form class="admin-form" method="POST" enctype="multipart/form-data" action="">
         {% csrf_token %}
         <div class="form-row">
             {% csrf_token %}
