Add the ability to add rentals, templates, form and style it

--- a/templates/administrator/rentals/admin_rentals.html
+++ b/templates/administrator/rentals/admin_rentals.html
@@ -7,7 +7,7 @@
     <h1 class="text-center mt-5">Rentals Admin</h1>
 
     <div class="text-center mt-5">
-        <a href=""><button type="button" class="btn user_button_sm my_hover"><i
+        <a href="{% url 'add_rental' %}"><button type="button" class="btn user_button_sm my_hover"><i
                     class="fa-solid fa-plus"></i> Add Rental</button></a>
     </div>
 
