--- a/templates/administrator/rentals/admin_rentals.html
+++ b/templates/administrator/rentals/admin_rentals.html
@@ -44,7 +44,7 @@
                 <td>{{rental.date_created}}</td>
                 <td><a href="{% url 'rental_detail' rental.pk %}">{{rental.title|slice:":30"|title}}</td></a>
                 <td>£{{rental.Price}}</td>
-                <td><a href=""><button class="btn btn-sm btn-primary"><i class="far fa-edit">
+                <td><a href="{% url 'edit_rental' rental.pk %}"><button class="btn btn-sm btn-primary"><i class="far fa-edit">
                                 Edit</i></button></a> </td>
                 <td><a href=""><button class="btn btn-sm btn-danger "><i class="fas fa-trash-alt">
                                 Delete</i></button></a>
