--- a/templates/administrator/rentals/admin_rentals.html
+++ b/templates/administrator/rentals/admin_rentals.html
@@ -46,7 +46,7 @@
                 <td>£{{rental.Price}}</td>
                 <td><a href="{% url 'edit_rental' rental.pk %}"><button class="btn btn-sm btn-primary"><i class="far fa-edit">
                                 Edit</i></button></a> </td>
-                <td><a href=""><button class="btn btn-sm btn-danger "><i class="fas fa-trash-alt">
+                <td><a href="{% url 'delete_rental' rental.pk %}"><button class="btn btn-sm btn-danger "><i class="fas fa-trash-alt">
                                 Delete</i></button></a>
                 </td>
             </tr>
