Add cart icon, connect to js and style it

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -286,6 +286,23 @@ body {
 .red {
     background-color: #f44336;
 }
+/* ------------------------------------Cart */
+.cart{
+    position: relative;
+}
+.cart_quantity{
+    background-color: var(--orange-pantone);
+    width:25px;
+    height:25px;
+    border-radius: 50%;
+    position: absolute;
+    left:15px;
+    top:20px;
+    color:white;
+    line-height: 10px 50px;
+    padding-left: 8px;
+}
+
 
 /* ----------------Animation for home*/
 @keyframes typing {
@@ -306,6 +323,9 @@ body {
     margin: 100px auto;
     width: 200px;
 }
+
+
+
 
 
 /* ------------------------------------------------------------------search classes */
