--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -71,7 +71,7 @@
                         </div>
                         <!-- Submit button -->
                         <div class="form-group mt-3">
-                            <button type="submit" class="user_button btn">Submit</button>
+                            <button type="submit" class="user_button my_hover btn">Add to cart</button>
                         </div>
                 </form>
             </div>
