--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -66,10 +66,13 @@
                                 <i class="fa-solid fa-user"></i> Sort by
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{% url 'newest_result' %}"></i>Sort by newest</a></li>
+                                <li><a class="dropdown-item" href="{% url 'newest_result' %}"></i>Sort by newest</a>
+                                </li>
                                 <li><a class="dropdown-item" href="{% url 'oldest_result' %}">Sort by Oldest</a></li>
-                                <li><a class="dropdown-item" href="{% url 'filter_by_ascend' %}">Price (low to high)</a></li>
-                                <li><a class="dropdown-item" href="{% url 'filter_by_descend' %}">Price (high to low) </a></li>
+                                <li><a class="dropdown-item" href="{% url 'filter_by_ascend' %}">Price (low to high)</a>
+                                </li>
+                                <li><a class="dropdown-item" href="{% url 'filter_by_descend' %}">Price (high to low)
+                                    </a></li>
                             </ul>
                         </li>
                         {% if not user.is_authenticated %}
@@ -107,9 +110,16 @@
                         </li>
                     </div>
 
+                      <!-- cart -->
+                      <li class="nav-item cart">
+                        <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        
+                        <span class="cart_quantity">0</span>
+                    </li>
                 </ul>
                 <!-- Search form -->
-                <form class="d-flex" role="search" method="get" autocomplete="on" action="{% url 'excursion_search_results' %}">
+                <form class="d-flex" role="search" method="get" autocomplete="on"
+                    action="{% url 'excursion_search_results' %}">
                     {% if navbar_input %}
                     <input class="form-control me-2" type="search" name="navbar" placeholder="{{navbar_input}}"
                         aria-label="Search">
@@ -169,7 +179,7 @@
         crossorigin="anonymous"></script>
     <!-- Local Javascript -->
     <script src="{% static 'js/script.js' %}"></script>
-
+    <script src="{% static 'js/cart.js' %}"></script>
 </body>
 
 </html>
