--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -112,9 +112,11 @@
 
                       <!-- cart -->
                       <li class="nav-item cart">
-                        <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                        <a class="nav-link" href="{% url 'cart' %}">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <span class="cart_quantity">0</span>
+                        </a>
         
-                        <span class="cart_quantity">0</span>
                     </li>
                 </ul>
                 <!-- Search form -->
